--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "artemis_api",
+  "name": "eve-equinox-api",
   "version": "0.0.1",
-  "description": "Artemis API NodeJS server",
+  "description": "eve-equinox-api server",
   "main": "dist/server.js",
   "source": "src/server.ts",
   "targets": {
