--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --verbose -w 5 --coverage",
     "prepare": "npx husky install",
-    "bundle-analyzer": "parcel build src/server.ts --reporter @parcel/reporter-bundle-analyzer"
+    "bundle-analyzer": "parcel build src/server.ts --reporter @parcel/reporter-bundle-analyzer",
+    "start:redis": "docker-compose up -d redis"
   },
   "husky": {
     "hooks": {
@@ -44,9 +45,12 @@
     "@parcel/reporter-bundle-analyzer": "^2.8.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
+    "@types/passport": "^1.0.12",
+    "@types/passport-oauth2": "^1.4.12",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
@@ -73,10 +77,19 @@
     "url": "^0.11.0"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
+    "connect-redis": "^7.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "ioredis": "^5.3.1",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-http-header-strategy": "^1.1.0",
+    "passport-oauth2": "^1.7.0",
+    "puppeteer": "^19.8.3"
   }
 }
