--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^18.15.11",
     "@types/passport": "^1.0.12",
     "@types/passport-oauth2": "^1.4.12",
+    "@types/passport-oauth2-refresh": "^1.1.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
@@ -65,7 +66,7 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "parcel": "^2.8.3",
-    "prettier": "^2.8.7",
+    "prettier": "^3.0.0-alpha.6",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
@@ -90,6 +91,7 @@
     "passport": "^0.6.0",
     "passport-http-header-strategy": "^1.1.0",
     "passport-oauth2": "^1.7.0",
+    "passport-oauth2-refresh": "^2.1.0",
     "puppeteer": "^19.8.3"
   }
 }
