--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "parcel": "^2.8.3",
-    "prettier": "^3.0.0-alpha.6",
+    "prettier": "^2.8.7",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
