--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "private": true,
   "devDependencies": {
     "@parcel/reporter-bundle-analyzer": "^2.8.3",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
@@ -81,6 +82,7 @@
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "connect-redis": "^7.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
