--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@types/passport-oauth2-refresh": "^1.1.1",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "buffer": "^5.5.0",
@@ -77,6 +79,8 @@
     "sequelize-typescript-cli": "^1.1.0",
     "stream-http": "^3.1.0",
     "supertest": "^6.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
@@ -84,7 +88,6 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
     "connect-redis": "^7.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
